--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -6,20 +6,30 @@
     right: 0;
     width: 100%;
     height: 100%;
-    padding: 296px 100px 52px;
+    padding: 296px 0 52px;
     background-color: #576f35;
     transform: translateX(100%);
-    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu-box.is-open {
+.mobile-overlay.is-open .mobile-menu-box {
     transform: translateX(0);
+}
+
+@media only screen and (min-width: 768px) {
+    .mobile-overlay.is-open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
 }
 
 @media only screen and (min-width: 768px) {
     .mobile-menu-box {
         max-width: 351px;
-        padding: 360px 97px 48px;
+        padding: 360px 0 48px;
+        transform: translateX(0);
+        transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
 
@@ -114,21 +124,44 @@
 }
 
 .mobile-menu-btn {
+    /* max-width: 100%; */
+    margin: 0 auto;
     font-weight: 600;
     font-size: 18px;
     line-height: 1.11;
     letter-spacing: -0.01em;
     text-transform: uppercase;
-    color: #fbfbfb;
+    /* color: #fbfbfb; */
     border-radius: 30px;
-    padding: 16px;
+    padding: 16px 41px;
     background-color: #7a3145;
-    border: none;
+    /* border: none; */
     transition: background-color 500ms cubic-bezier(0.4, 0, 0.2, 1), color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (min-width: 768px) {
+    .mobile-menu-btn {
+        padding: 16px 32px;
+    }
 }
 
 .mobile-menu-btn:hover,
 .mobile-menu-btn:active {
     background-color: #fbfbfb;
     color: #7a3145;
+}
+
+@media only screen and (min-width: 768px) {
+    .mobile-overlay {
+        background-color: rgba(20, 20, 20, 0.4);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        z-index: 999;
+        visibility: hidden;
+        pointer-events: none;
+        transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
