--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,5 +1,6 @@
-<section>
-    <div class="container">
-        <h2>Advertisement</h2>
+<section class="container">
+    <div class="page-advertisement">
+        <h2 class="visually-hidden">Advertisement</h2>
+        <p class="text-advertisement"><span class="wrapper-text">Discount up to 40%!</span> Taste the vitamins and keep your health</p>
     </div>
 </section>
